--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <li><h3>Suffolk County Community College</h3></li>
         <ul>
           <li>3.6 GPA, honor's program, smart fella.</li>
-          <li>My classes kept getting cancelled due to covid. I went to stony brook instead of finishing at Suffolk</li>  
+          <li>My classes kept getting cancelled due to covid. I went to Stony Brook instead of finishing at Suffolk</li>  
         </ul>
     </ul>
   </p>
