--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <p>That's me!</p>
 
   <h2>Summary</h2>
-    <p>My name is Angel (known by some as Angle). 2x volleybal champion, famous Roberto Clemente bastekball player, former Twitch streamer.
-      Used to ride bench for JNR FC. Currently work for Xerox.
+    <p>My name is Angel (known by some as Angle). 2x volleyball champion, famous Roberto Clemente bastekball player, former Twitch streamer.
+      Used to ride bench for JNR FC. Currently working for Xerox.
     </p>
     <P>Listed below are some little quirks and features of my life.</P> 
     
